# SegmentRegistration

./: SegmentRegistration.sln
SegmentRegistration/: AdjustableParameterInfo.cpp  AdjustableParameterInfo.h  AdjustableParameterInterface.cpp  AdjustableParameterInterface.h  AdjustmentInfo.cpp  AdjustmentInfo.h  AffineLineRegistration.cpp  AffineLineRegistration.h  Harris.h  LineExtract.cpp  LineExtract.h  LineMatch.h  LineMatchCost.cpp  LineMatchCost.h  LineMatchFLANN.cpp  LineMatchFLANN.h  PointExtract.cpp  PointExtrat.h  PointMatch.cpp  PointMatch.h  SegmentRegistration.vcxproj  SegmentRegistration.vcxproj.filters  SpectralMatching.cpp  SpectralMatching.h  draw.cpp  draw.h  ecm.cpp  ecm.h  ecmlr.cpp  ecmlr.h  ecmlrAffine.cpp  ecmlrAffine.h  ecmlrPerspective.cpp  ecmlrPerspective.h  ecmprAffine.cpp  ecmprAffine.h  eigenVec.txt  fft.cpp  fft.h  frt.cpp  (+17 more)
SegmentRegistration/RANSAC/estimators/: CMakeLists.txt  Fundamental7ptSolver.h  Solver.h  affineError.h  affineSolver.h  lineAffineError.h  lineAffineSolver.h  lineFittingSolver.h  pointToLineDist.h
SegmentRegistration/RANSAC/grouping/: CMakeLists.txt  groupByFlows.h  testGroupByFlows.cpp
SegmentRegistration/RANSAC/ransac/: CMakeLists.txt  check_ground_truth.h  non_randomness.h  prosac_tools.h  ransac.h  ransacTools.h
SegmentRegistration/bak/5.15/: AffineLineRegistration.h  (+1 more)
SegmentRegistration/lbd/: EDLineDetector.cpp  EDLineDetector.hh  LineDescriptor.cpp  LineDescriptor.hh  LineStructure.hh  PairwiseLineMatching.cpp  PairwiseLineMatching.hh
SegmentRegistration/lp/: LineMatcher.h  lp.cpp  lp.h  lsd_lp.c  lsd_lp.h
(+6 files in other folders)
